--- a/src/spinner.css
+++ b/src/spinner.css
@@ -1,7 +1,10 @@
+x-spinner, x-spinner b, x-spinner img {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 x-spinner {
   display: inline-block;
   position: relative;
-  -moz-box-sizing: border-box;
   width: 64px;
   line-height: 100%;
   font-family: sans-serif;
@@ -9,7 +12,6 @@ x-spinner {
   overflow: hidden;
 }
 x-spinner b {
-  -moz-box-sizing: border-box;
   display: block;
   font-size: inherit;
   height: 100%;
@@ -25,18 +27,31 @@ x-spinner b {
   width: 100%;
   word-wrap: break-word;
   z-index: 1;
-  /*pointer-events: none;*/
 }
 x-spinner img {
-  -moz-box-sizing: border-box;
+  -webkit-animation: 1s spin infinite linear;
+  -moz-animation: 1s spin infinite linear;
+  -ms-animation: 1s spin infinite linear;
   animation: 1s spin infinite linear;
   height: auto;
   width: 100%;
 }
+
+
+    x-spinner[paused] img {
+		-webkit-animation-play-state: paused;
+		-moz-animation-play-state: paused;
+		-ms-animation-play-state: paused;
+		animation-play-state: paused;
+	}
+
 x-spinner:not([src]) img {
   border-radius: 100%;
   border: solid transparent;
   border-top-color: inherit;
 }
 
-@keyframes spin { to { transform: rotate(1turn); } }
+@-webkit-keyframes spin { to { -webkit-transform: rotate(360deg); } }
+@-moz-keyframes spin { to { -moz-transform: rotate(360deg); } }
+@-ms-keyframes spin { to { -ms-transform: rotate(360deg); } }
+@keyframes spin { to { transform: rotate(360deg); } }
