--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,67 @@
-x-stub {
-  display: block; 
+
+x-spinner {
+  display: block;
+  width: 1em;
+}
+
+x-spinner, x-spinner img {
+  -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+x-spinner img {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+  border-left-color: #000;
+  -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+  -webkit-box-shadow: 0 0 6px 8px rgba(255,255,255,0.9);
+  box-shadow: 0 0 6px 8px rgba(255,255,255,0.9);
+}
+
+x-spinner[fade] img {
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+	-moz-transition: opacity 0.6s;
+	-ms-transition: opacity 0.6s;
+	transition: opacity 0.6s;
+}
+
+x-spinner[fade][spinning] img {
+  opacity: 1;
+}
+
+x-spinner[x-spinner-spinning] img {
+  -webkit-animation: x-spinner-rotate 1s infinite linear;
+  -ms-animation: x-spinner-rotate 1s infinite linear;
+  animation: x-spinner-rotate 1s infinite linear;
+}
+
+@-webkit-keyframes x-spinner-rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes x-spinner-rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
