--- a/src/main.css
+++ b/src/main.css
@@ -7,41 +7,36 @@ x-spinner, x-spinner img {
 }
 
 x-spinner {
-  display: -webkit-box;      
-	display: -moz-box;         
-	display: -ms-flexbox;      
-	display: -webkit-flex;     
-	display: flex;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+  display: table;
   text-align: center;
+  color: #000;
 }
 
 x-spinner[fade] {
+  opacity: 0;
   -webkit-transition: opacity 0.6s;
 	-moz-transition: opacity 0.6s;
 	-ms-transition: opacity 0.6s;
 	transition: opacity 0.6s;
 }
 
-x-spinner[fade]:not([spinning]) {
-  opacity: 0;
-}
-
 x-spinner[transition="fade-in"] {
   opacity: 1;
+  display: table;
 }
 
 x-spinner[transition="fade-out"] {
   opacity: 0;
+  display: none;
+}
+
+x-spinner[transitioning] {
+  display: table;
+}
+
+x-spinner .x-spinner-center {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 x-spinner .x-spinner-center[label]:after {
@@ -65,7 +60,7 @@ x-spinner img {
 	box-sizing: border-box;
 }
 
-x-spinner[spinning] img {
+x-spinner[spinning] img, x-spinner[transitioning] img {
   -webkit-animation: x-spinner-rotate 1s infinite linear;
   -ms-animation: x-spinner-rotate 1s infinite linear;
   animation: x-spinner-rotate 1s infinite linear;
