switching to inline svg

--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 
-x-spinner, x-spinner img {
+x-spinner {
   -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
@@ -10,6 +10,7 @@ x-spinner {
   display: table;
   text-align: center;
   color: #000;
+  stroke: #000;
 }
 
 x-spinner[fade] {
@@ -37,6 +38,7 @@ x-spinner[transitioning] {
 x-spinner .x-spinner-center {
   display: table-cell;
   vertical-align: middle;
+
 }
 
 x-spinner .x-spinner-center[label]:after {
@@ -44,29 +46,20 @@ x-spinner .x-spinner-center[label]:after {
   content: attr(label);
 }
 
-x-spinner img {
+x-spinner svg {
   display: block;
   width: 1em;
-  height: auto;
+  height: 1em;
   margin: 0 auto;
-  border-radius: 50%;
-  border: 3px solid;
-  border-color: transparent;
-  border-left-color: inherit;
-  border-right-color: inherit;
-  -webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	box-sizing: border-box;
 }
 
-x-spinner[spinning] img, x-spinner[transitioning] img {
+x-spinner[spinning] svg, x-spinner[transitioning] svg {
   -webkit-animation: x-spinner-rotate 1s infinite linear;
   -ms-animation: x-spinner-rotate 1s infinite linear;
   animation: x-spinner-rotate 1s infinite linear;
 }
 
-x-spinner[reverse] img {
+x-spinner[reverse] svg {
   -webkit-animation-direction: reverse;
   -ms-animation-direction: reverse;
   animation-direction: reverse;
