--- a/src/main.css
+++ b/src/main.css
@@ -4,25 +4,25 @@ x-spinner {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  text-align: center;
-  color: #000;
-  stroke: #000;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
+  -webkit-flex-direction: column;
+   flex-direction: column;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
   align-items: center;
+  text-align: center;
+  color: #000;
 }
 
 x-spinner[fade] {
   opacity: 0;
   -webkit-transition: opacity 0.6s;
-	-moz-transition: opacity 0.6s;
 	-ms-transition: opacity 0.6s;
 	transition: opacity 0.6s;
 }
@@ -36,47 +36,50 @@ x-spinner[transition="fade-out"]:not([transitioning]) {
   display: none;
 }
 
-x-spinner .x-spinner-center[label]:after {
-  display: block;
-  content: attr(label);
+x-spinner::before {
+  content: " ";
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  color: inherit;
+  border: 0.25em solid rgba(0, 0, 0, 0.2);
+  border-top-color: inherit;
+  border-bottom-color: inherit;
+  border-radius: 50%;
+  -webkit-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
 }
 
-x-spinner svg {
-  display: block;
-  width: 1em;
-  height: 1em;
-  margin: 0 auto;
-}
-
-x-spinner[spinning] svg, x-spinner[transitioning] svg {
+x-spinner[spinning]::before,
+x-spinner[transitioning]::before {
   -webkit-animation: x-spinner-rotate 1s infinite linear;
   -ms-animation: x-spinner-rotate 1s infinite linear;
   animation: x-spinner-rotate 1s infinite linear;
 }
 
-x-spinner[reverse] svg {
+x-spinner[reverse]::before {
   -webkit-animation-direction: reverse;
   -ms-animation-direction: reverse;
   animation-direction: reverse;
 }
 
+x-spinner[label]::after {
+  display: inline-block;
+  content: attr(label);
+  padding: 0.5em 0;
+  font-size: 0.75em;
+}
+
 @-webkit-keyframes x-spinner-rotate {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
+  to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 
 @keyframes x-spinner-rotate {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
+  to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
